tests/endtoend/failure/expected/error_bad_return_else.compile.out
error_bad_return_else.silly:7:5: error: RETURN is not currently allowed in a ELSE block
    7 |     RETURN 0;
      |     ^
